--- a/index.html/main.css
+++ b/index.html/main.css
@@ -35,9 +35,9 @@ nav ul li a{
 
 /* Dlink section */
 .dlink {
-    background: url('/resources/images/Amaka\ 2.jpg.jpg') no-repeat 
+    background: url('../resources/images/Amaka\ 1.jpg.jpg') no-repeat 
     center center/cover; 
-    height: 70vh;
+    height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -95,24 +95,29 @@ p {
     gap: 20px;   
 }
 .about img {
-    width: 20%;
+    width: 40%;
 }
 
 /* All Gallery */
 .uiux-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    gap: 10px;
-    padding: 20px;
-}
-.fe-gallery h2 {
-    text-align: center;
+    gap: 20px;
+    padding: 30px;
+    width: 70%;
+    object-fit: cover;
 }
 .fe-gallery img {
     width: 100%;
-    height: 320px;
+    height: 90%;
     object-fit: cover;
+    padding: 10px;
 }
+
+.fe-gallery h2 {
+    text-align: center;
+}
+
 .frontend-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
@@ -120,9 +125,11 @@ p {
     padding: 30px;  
 }
 .fed-gallery img {
-    width: 100%;
-    height: 480px;
+    width: 80%;
+    height: 70vh auto;
     object-fit: cover; 
+    padding: 20px;
+     
 }
 
 /* Form Section  */
@@ -161,22 +168,31 @@ footer {
 }
 
 /* Media Queries */
-@media (max-width: 600px) {
-   body {padding: 10px;}
-    .about { flex-direction: column;}
-}
-.uiux-container {display: grid;
-    grid-template-columns: 1fr;
-    gap: 8px;
-    padding: 10px;}
-.frontend-container { display: grid;
-    grid-template-columns: 1fr;
-    gap: 8px;
-    padding: 10px;}
-.logo {display: none;}
-header {padding: 5px;}
-button {width: 20%; padding: 4px; font-size: small;}
-
-    @media(max-width: 1020px) {
-        .uiux-container {grid-template-columns: 1fr 1fr;}
+@media ( max-width: 600px) {
+    .logo {
+        display: none;
     }
+    header {
+        padding: 5px;
+    }
+    .uiux-container{
+      flex-direction: column;  
+    }
+    .fe-gallery img {
+        width: 70%;
+    }
+    footer p {
+      font-size: 10px;
+    }
+    button {
+        width: 10%; 
+        padding: 4px;    
+    }
+}
+
+@media (max-width: 1020px) {
+    .uiux-container {
+        grid-template-columns: (1fr 1fr);
+    }
+}
+   
