--- a/index.html/main.css
+++ b/index.html/main.css
@@ -1,7 +1,7 @@
 /* variance */
 :root{
-    --primary-color: #9fcbe8;
-    --secondary-color: #f253c5;
+    --primary-color: #e7eff9;
+    --secondary-color: #e34bb8;
     --font-size: 18px; 
     --text-color: #080908;
 }
@@ -28,8 +28,9 @@ nav ul li{
     margin: 0 15px;
 }
 nav ul li a{
-    color: black;
+    color: rgb(11, 11, 11);
     text-decoration: none;
+    font-size: 24px;
 }
 
 /* Header styling */
@@ -56,12 +57,13 @@ header {
 .hero h1 {
     font-size: 40px;
     font-weight: 800;
-    color: #72f3d5;
+    color: #f2f4f3;
+    padding-top: 400px;
 }
 .hero p {
     font-size: 24px;
     font-weight: 600;
-    color: #72f3d5;
+    color: #eff5f3;
 }
 
 /* About Section */
@@ -72,12 +74,13 @@ header {
     gap: 20px;   
 }
 .about-text h2 {
-    color: #f80bb5;
-    font-size: 30px;
-    font-weight: 100;
+    font-size: 26px;
+    font-weight: 200;
+    text-align: center;
 }
 .about-text p {
-    font-size: 26px;
+    font-size: 20px;
+    text-align: justify;
 }
 .about img {
     width: 40%;
@@ -86,9 +89,13 @@ header {
 /* Product Design Section */
 h1 {
     text-align: center;
-    font-size: 40px;
+    font-size: 32px;
 }
-p {
+h2 {
+    text-align: center;
+    font-size: 26px;
+}
+.project p {
     font-size: 20px;
 }
 .pdp {
@@ -98,6 +105,10 @@ p {
   padding: 10px;
   font-size: 20px;
 }
+p {
+    font-size: 20px;
+}
+
 /* All Gallery */
 .uiux-container {
     display: grid;
@@ -115,7 +126,7 @@ p {
 }
 .fe-gallery h2 {
     text-align: center;
-    font-size: 30px;
+    font-size: 26px;
 }
 .fe-gallery p {
     font-size: 20px;
@@ -165,35 +176,36 @@ form {
     align-items: center;
 }
 input, textarea {
-    width: 60%;
-    padding: 10px;
-    margin: 5px;
+    width: 70%;
+    padding: 15px;
+    margin: 8px;
 }
 form button {
-    padding: 8px;
-    width: 16%;
-    background-color: aqua;
+    padding: 15px;
+    width: 50%;
+    background-color: rgb(116, 236, 116);
+    text-align: center;
+    font-size: 20px;
 }
-
-.button {
-    width: 16%; 
-    padding: 8px; 
-    background-color: aqua;
+form label {
+    font-size: 20px;
 }
 
 /* Footer Section */
 footer {
-    background-color: rgb(5, 68, 240);
-    color: white;
+    background-color: var(--primary-color);
     padding: 10px;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    justify-content: space-around;
 }
 .social-links img {
-    width: 10%;
+    width: 15%;
     height: 10%;
-    padding: 10px;
+    padding: 20px;
+}
+footer p {
+    font-size: 24px;
 }
 
 /* Media Queries */
@@ -214,17 +226,25 @@ footer {
         font-size: 30px
     }
     .hero p{
-        font-size: 24px;
+        display: none;
     }
     .fe-gallery img {
-        width: 70%;
+        display: grid;
+        grid-template-columns: auto;
+        width: 90%;
     }
     footer p {
-      font-size: 20px;
+      font-size: 26px;
     }
     button {
-        width: 10%; 
-        padding: 4px;    
+        width: 30%; 
+        padding: 15px;
+        margin: 4px;    
+    }
+    .social-links img {
+        width: 20%;
+        height: 15%;
+        padding: 25px;
     }
 }
 
