--- a/index.html/main.css
+++ b/index.html/main.css
@@ -11,7 +11,7 @@ body {
 /* --------------Header/Nav Section------------ */
 #header {
     width: 100%;
-    height: 100vh;
+    height: 60vh;
 }
 #header img {
  padding-left: 40%; 
@@ -163,7 +163,11 @@ footer h4 {
     }
     #header {
         width: 100%;
-        height: 60vh;
+        height: 45vh;
+    }
+    .header-text h1 {
+        font-size: 30px;
+        margin-top: 10px;
     }
     #header img {
         padding-left: 40%; 
