--- a/index.html/main.css
+++ b/index.html/main.css
@@ -153,7 +153,7 @@ footer h4 {
     font-size: 20px;
 }
 
-/* Media Queries */
+/*-------------- Media Queries--------------- */
 @media ( max-width: 600px) {
     .logo {
         display: none;
@@ -166,7 +166,7 @@ footer h4 {
         height: 45vh;
     }
     .header-text h1 {
-        font-size: 30px;
+        font-size: 36px;
         margin-top: 10px;
     }
     #header img {
@@ -179,6 +179,12 @@ footer h4 {
     }
     h1 {
         font-size: 20px;
+    }
+    .amaka-text p {
+        text-align: justify;
+    }
+    .uiux p {
+        text-align: justify;
     }
     input, textarea {
         background-color: #bfdcf5;
