--- a/index.html/main.css
+++ b/index.html/main.css
@@ -187,7 +187,7 @@ footer h4 {
         text-align: justify;
     }
     input, textarea {
-        background-color: #bfdcf5;
+        background-color: #f2f4f6;
     }
     footer h4 {
       font-size: 16px;
