--- a/index.html/main.css
+++ b/index.html/main.css
@@ -13,17 +13,24 @@ body {
     width: 100%;
     height: 60vh;
 }
-#header img {
- padding-left: 40%; 
- position: absolute;  
+.header_img {
+    float: right; 
+    width: 40%
 }
 .container {
     padding: 10px 10%;
 }
-nav {
+.navbar {
+    position: fixed;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 10%;
+    padding: 25px 8px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    align-content: center;
     justify-content: space-around
 }
 nav ul li {
@@ -34,11 +41,12 @@ nav ul li {
 nav ul li a {
     color: #fff;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 18px;
 }
 .logo {
-    width: 140px;
+    width: 120px;
     font-size: 20px;
+    font-weight: 600;
 }
 .header-text {
     margin-top: 10%;
@@ -46,36 +54,69 @@ nav ul li a {
     position: relative;
 }
 .header-text h1 {
-    font-size: 40px;
+    font-size: 34px;
     margin-top: 10px;
 }
 .header-text h1 span {
     color: rgb(103, 212, 231);
 }
+.header-text h3 {
+    font-size: 26px;
+}
+.header-text p {
+    font-size: 20px;
+}
 /* ---------------About Section---------------------- */
-.amaka-text p{
-    font-size: 18px;
+#about {
+    margin-top: 200px;
+}
+.amaka-text h1 {
+    margin-top: 80px;
+    text-align: center;
+    font-size: 32px;
+
+}
+.amaka-text p {
+    font-size: 20px;
+    margin-top: 10px;
 }
 /* -----------------Services/Projects Section---------- */
+#project {
+    margin-top: 200px;
+}
+#project h1 {
+    text-align: center;
+    font-size: 32px;
+    margin-bottom: 40px;
+}
 .row {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-}
-h1 {
-    font-size: 24px;
+    justify-content: center;
 }
 .designer {
-    flex-basis: 40%;  
+    flex-basis: 50%;
+    font-size: 16px;  
+}
+.designer p span {
+    font-size: 24px;
+    color: rgb(103, 214, 214);
+    font-weight: 600;
 }
 .developer {
-    flex-basis: 40%;
+    flex-basis: 50%;
+    font-size: 16px;
+}
+.developer p span {
+    font-size: 24px;
+    color: rgb(103, 214, 214);
+    font-weight: 600;
 }
 .prd p {
-    font-size: 20px;
+    font-size: 18px;
 }
 .pd p {
-    font-size: 20px;
+    font-size: 18px;
 }
 .uiux h2 {
     text-align: center;
@@ -91,7 +132,7 @@ h1 {
     margin-top: 20px;
 }
 .card {
-    width: 320px;
+    width: 250px;
     border-radius: 8px;
     overflow: hidden;
     background-color: #383737;
@@ -99,15 +140,15 @@ h1 {
     margin: 20px;
 }
 .card img {
-    width: 100%;
-    height: auto;
+    width: 250px;
+    height: 280px;
 }
 .card-content {
     padding: 16px;
 }
 .card-content h2 {
-    font-size: 28px;
-    margin-top: 8px;
+    font-size: 20px;
+    margin-top: 6px;
 }
 .card-content p{
     color: #aba5a5;
@@ -145,8 +186,8 @@ footer {
     align-items: center;
 }
 .social-links img {
-    width: 105px;
-    height: 105px;
+    width: 70px;
+    height: 70px;
     padding: 20px;
 }
 footer h4 {
@@ -159,21 +200,23 @@ footer h4 {
         display: none;
     }
     nav ul li a {
-        font-size: 16px;
+        font-size: 14px;
     }
     #header {
         width: 100%;
         height: 45vh;
     }
     .header-text h1 {
-        font-size: 36px;
+        font-size: 24px;
         margin-top: 10px;
     }
-    #header img {
-        padding-left: 40%; 
-        position: absolute; 
-        width: 300px; 
-       }
+    .header-text h3 {
+        font-size: 18px;
+    }
+    .header-text p {
+        font-size: 16px;
+        text-align: justify;
+    }
     .container {
         padding: 5px 5%;
     }
@@ -183,6 +226,10 @@ footer h4 {
     .amaka-text p {
         text-align: justify;
     }
+    #about {
+        margin-top: 2px;
+        margin-right: 2px;
+    }
     .uiux p {
         text-align: justify;
     }
@@ -191,6 +238,7 @@ footer h4 {
     }
     footer h4 {
       font-size: 12px;
+      text-align: center;
     }
     button {
         width: 30%; 
@@ -198,8 +246,8 @@ footer h4 {
         margin: 4px;    
     }
     .social-links img {
-        width: 22%;
-        height: 18%;
-        padding: 2px;
+        width: 20%;
+        height: 16%;
+        align-content: center;
     }
 }
