--- a/index.html/main.css
+++ b/index.html/main.css
@@ -179,7 +179,6 @@ form label {
 
 /* Footer Section */
 footer {
-    background-color: var(--primary-color);
     padding: 30px;
     display: flex;
     flex-direction: column;
@@ -200,8 +199,8 @@ footer h4 {
         display: none;
     }
     nav ul li a {
-        font-size: 20px;
-        font-weight: 600;
+        font-size: 16px;
+        font-weight: 500;
     }
     #header {
         width: 100%;
@@ -261,8 +260,8 @@ footer h4 {
         margin: 4px;    
     }
     .social-links img {
-        width: 20%;
-        height: 16%;
-        align-content: center;
+        width: 30%;
+        height: 20%;
+        padding: 10px;
     }
 }
