--- a/index.html/main.css
+++ b/index.html/main.css
@@ -80,6 +80,9 @@ nav ul li a {
     font-size: 20px;
     margin-top: 10px;
 }
+.about-img img {
+    display: none;
+}
 /* -----------------Services/Projects Section---------- */
 #project {
     margin-top: 250px;
@@ -96,7 +99,10 @@ nav ul li a {
 }
 .designer {
     flex-basis: 50%;
-    font-size: 16px;  
+    font-size: 20px;  
+}
+.designer p {
+    font-size: 22px;  
 }
 .designer p span {
     font-size: 24px;
@@ -105,7 +111,10 @@ nav ul li a {
 }
 .developer {
     flex-basis: 50%;
-    font-size: 16px;
+    font-size: 20px;
+}
+.developer {
+    font-size: 22px;
 }
 .developer p span {
     font-size: 24px;
@@ -113,10 +122,10 @@ nav ul li a {
     font-weight: 600;
 }
 .prd p {
-    font-size: 18px;
+    font-size: 20px;
 }
 .pd p {
-    font-size: 18px;
+    font-size: 20px;
 }
 .uiux h2 {
     text-align: center;
@@ -190,7 +199,8 @@ footer {
     padding: 20px;
 }
 footer h4 {
-    font-size: 20px;
+    font-size: 16px;
+    margin-left: 8%;
 }
 
 /*-------------- Media Queries--------------- */
@@ -204,21 +214,30 @@ footer h4 {
     }
     #header {
         width: 100%;
-        height: 45vh;
+        height: 25vh;
     }
     .header-text h1 {
         font-size: 24px;
         margin-top: 10px;
     }
     .header-text h3 {
-        font-size: 18px;
+        font-size: 20px;
+        margin-top: 20%;
     }
     .header-text p {
-        font-size: 16px;
+        font-size: 18px;
         text-align: justify;
     }
+    .header_img {
+        display: none;
+    }
+    .about-img img {
+        display: block;
+    }
     .container {
-        padding: 5px 5%;
+        padding: 10px 10%;
+        margin-left: 2%;
+        margin-right: 2%;
     }
     h1 {
         font-size: 20px;
@@ -230,22 +249,29 @@ footer h4 {
         margin-top: 2px;
         margin-right: 2px;
     }
+    #project {
+        margin-top: 20%;
+    }
     .row {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 20px;
+        display: block;
         justify-content: center;
     }
     .designer {
-        flex-basis: 50%;
-        font-size: 14px;  
+        font-size: 16px;  
+    }
+    .designer p {
+        font-size: 20px;  
     }
     .developer {
-        flex-basis: 50%;
-        font-size: 14px;
+        font-size: 20px;
+        margin-top: 16%;
     }
     .uiux p {
         text-align: justify;
+        font-size: 22px;
+    }
+    #contact {
+        margin-top: 20%;
     }
     input, textarea {
         background-color: #f2f4f6;
@@ -260,8 +286,9 @@ footer h4 {
         margin: 4px;    
     }
     .social-links img {
-        width: 30%;
-        height: 20%;
+        width: 20%;
+        height: 15%;
         padding: 10px;
+        margin-left: 3.6%;
     }
 }
