--- a/index.html/main.css
+++ b/index.html/main.css
@@ -247,7 +247,7 @@ footer h4 {
         text-align: justify;
     }
     #about {
-        margin-top: 10px;
+        margin-top: 10;
         margin-right: 2px;
     }
     #project {
@@ -290,5 +290,6 @@ footer h4 {
         width: 20%;
         height: 15%;
         padding: 10px;
+        margin-left: 3%;
     }
 }
