--- a/index.html/main.css
+++ b/index.html/main.css
@@ -236,7 +236,7 @@ footer h4 {
         width: 80%;
     }
     .container {
-        padding: 10px 10%;
+        padding: 8px 8%
         margin-left: 2%;
         margin-right: 2%;
     }
@@ -247,7 +247,7 @@ footer h4 {
         text-align: justify;
     }
     #about {
-        margin-top: 10;
+        margin-top: 6px;
         margin-right: 2px;
     }
     #project {
