--- a/index.html/main.css
+++ b/index.html/main.css
@@ -237,8 +237,6 @@ footer h4 {
     }
     .container {
         padding: 8px 8%
-        margin-left: 2%;
-        margin-right: 2%;
     }
     h1 {
         font-size: 20px;
@@ -247,8 +245,7 @@ footer h4 {
         text-align: justify;
     }
     #about {
-        margin-top: 6px;
-        margin-right: 2px;
+        margin-top: 8x;
     }
     #project {
         margin-top: 20%;
