--- a/index.html/main.css
+++ b/index.html/main.css
@@ -11,14 +11,14 @@ body {
 /* --------------Header/Nav Section------------ */
 #header {
     width: 100%;
-    height: 60vh;
+    height: 46vh;
 }
 .header_img {
     float: right; 
     width: 40%
 }
 .container {
-    padding: 10px 10%;
+    padding: 5px 5%;
 }
 .navbar {
     position: fixed;
@@ -68,7 +68,8 @@ nav ul li a {
 }
 /* ---------------About Section---------------------- */
 #about {
-    margin-top: 200px;
+    margin-top: 240px;
+    margin-bottom: 50px;
 }
 .amaka-text h1 {
     margin-top: 80px;
@@ -80,12 +81,16 @@ nav ul li a {
     font-size: 20px;
     margin-top: 10px;
 }
+.web p {
+    font-size: 20px;
+}
 .about-img img {
     display: none;
 }
 /* -----------------Services/Projects Section---------- */
 #project {
     margin-top: 250px;
+    padding-top: 4%;
 }
 #project h1 {
     text-align: center;
@@ -165,6 +170,9 @@ nav ul li a {
     line-height: 1.2;
 }
 /* Form Section  */
+#contact {
+    padding-top: 6%;
+}
 form {
     display: flex;
     flex-direction: column;
@@ -249,6 +257,7 @@ footer h4 {
     }
     #project {
         margin-top: 20%;
+        padding-top: 20%;
     }
     .row {
         display: block;
@@ -270,6 +279,7 @@ footer h4 {
     }
     #contact {
         margin-top: 20%;
+        padding-top: 24%;
     }
     input, textarea {
         background-color: #f2f4f6;
